# CRGA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  main.c
ExampleCode/: Example.c
src/: '  crga.c  crga.h  crgahelper.h  main.c  termdraw.h
